# C_Plus_Plus_Advanced

./: .gitignore  CLION_CPP20_SETUP.md  CLION_SETUP.md  CLOUD_GPU_SETUP.md  CMakeLists.txt  EXERCISE_PATTERN.md  EXERCISE_QUICK_START.md  LEARNING_RESOURCES.md  MACOS_SETUP.md  NVIDIA_CPP_ROADMAP.md  README.md  run_test.sh  test_polymorphism
.github/workflows/: c-cpp.yml
exercises/: ADVANCED_EXERCISES_GUIDE.md  README.md
exercises/phase2_intermediate/oop_advanced/: 02_polymorphism_SOLUTIONS.cpp  02_polymorphism_exercises.cpp  03_virtual_functions_advanced.cpp  04_abstract_classes_advanced.cpp
practices/: CMakeLists.txt.template  README.md  README_PRACTICES.md
practices/phase1_fundamentals/basics/: 01_variables_datatypes  01_variables_datatypes.cpp  02_operators.cpp  03_control_flow.cpp  04_functions.cpp  05_arrays_strings.cpp
practices/phase1_fundamentals/data_structures/: 01_structures.cpp  02_enumerations.cpp  03_file_io.cpp
practices/phase1_fundamentals/functions/: 01_function_overloading.cpp  02_recursion.cpp  03_header_files.cpp
practices/phase1_fundamentals/pointers_memory/: 01_pointers_basics.cpp  02_references.cpp  03_dynamic_memory.cpp  04_pointer_arithmetic.cpp
practices/phase2_intermediate/memory_management/: 01_raii.cpp  02_smart_pointers.cpp  03_move_semantics.cpp  04_rule_of_five.cpp
practices/phase2_intermediate/oop_advanced/: 01_inheritance  01_inheritance.cpp  02_polymorphism.cpp  03_virtual_functions.cpp  04_abstract_classes.cpp  05_operator_overloading.cpp  06_files  06_files.cpp
practices/phase2_intermediate/oop_basics/: 01_classes_objects  01_classes_objects.cpp  02_constructors_destructors.cpp  03_access_specifiers.cpp  04_static_members.cpp  05_friend_functions.cpp
practices/phase2_intermediate/stl/: 01_vectors.cpp  02_containers.cpp  03_iterators.cpp  04_algorithms.cpp  05_lambdas.cpp
practices/phase3_advanced/concurrency/: 01_threads.cpp  02_mutexes_locks.cpp  03_condition_variables.cpp  04_atomics.cpp  05_async_futures.cpp
practices/phase3_advanced/design_patterns/: 01_singleton.cpp  02_factory.cpp  03_observer.cpp  04_strategy.cpp
practices/phase3_advanced/modern_cpp/: 01_auto_decltype.cpp  02_range_based_for.cpp  03_optional_variant_any.cpp  04_constexpr.cpp  05_ranges_coroutines.cpp
practices/phase3_advanced/templates/: 01_function_templates.cpp  02_class_templates.cpp  03_template_specialization.cpp  04_variadic_templates.cpp  05_sfinae_concepts.cpp
practices/phase4_performance/cache_optimization/: 01_cache_basics.cpp  02_memory_alignment.cpp  03_cache_friendly_code.cpp  04_prefetching.cpp
practices/phase4_performance/optimization/: 01_compiler_optimizations.cpp  02_loop_optimizations.cpp  03_data_structure_optimization.cpp  04_branch_prediction.cpp
practices/phase4_performance/profiling/: 01_timing_benchmarks.cpp  02_memory_profiling.cpp  03_cpu_profiling.cpp
practices/phase4_performance/simd/: 01_simd_intrinsics.cpp  02_vectorization.cpp  03_simd_algorithms.cpp
practices/phase5_cuda/cuda_advanced/: 01_shared_memory.cu  02_coalesced_access.cu  03_bank_conflicts.cu  04_reduction.cu  05_atomic_operations.cu  06_warp_primitives.cu  07_cooperative_groups.cu  08_dynamic_parallelism.cu
practices/phase5_cuda/cuda_basics/: 01_hello_cuda.cu  02_vector_addition.cu  03_thread_indexing.cu  04_memory_management.cu  05_error_handling.cu  06_unified_memory.cu  07_streams.cu
practices/phase5_cuda/cuda_libraries/: 01_cublas.cu  02_cufft.cu  03_thrust.cu  04_cub.cu  05_cudnn.cu  06_tensorrt.cpp
practices/phase5_cuda/cuda_optimization/: 01_profiling_nsight.cu  02_occupancy.cu  03_memory_bandwidth.cu  04_instruction_optimization.cu  05_tensor_cores.cu  06_multi_gpu.cu  07_cuda_graphs.cu
practices/phase5_cuda/gpu_basics/: 01_gpu_architecture.cpp  02_memory_hierarchy.cpp  03_compute_capability.cpp
practices/phase6_specialized/deep_learning/: 01_neural_network_basics.cpp  02_cnn.cpp  03_cuda_kernels_for_ml.cu  04_inference_optimization.cpp  05_mixed_precision.cu
practices/phase6_specialized/graphics/: 01_opengl_basics.cpp  02_vulkan_basics.cpp  03_shaders.cpp  04_3d_math.cpp  05_ray_tracing.cpp
practices/phase6_specialized/software_engineering/: 01_cmake.cpp  02_unit_testing.cpp  03_debugging.cpp  04_documentation.cpp
practices/phase6_specialized/systems_programming/: 01_linux_system_calls.cpp  02_memory_mapped_io.cpp  03_dma_basics.cpp  04_pcie_basics.cpp
practices/phase7_projects/cuda_raytracer/: README.md
practices/phase7_projects/custom_allocator/: README.md
practices/phase7_projects/data_structures/: README.md
practices/phase7_projects/mini_projects/: 01_calculator.cpp  02_text_editor.cpp  03_json_parser.cpp  04_image_processor.cpp  05_matrix_library.cpp  06_thread_pool.cpp  07_network_client.cpp  08_compression_library.cpp
practices/phase7_projects/ml_inference_engine/: README.md
practices/phase7_projects/physics_simulation/: README.md
solutions/: CMakeLists.txt  README.md
solutions/algorithms/: 01_two_sum_gpu.cu  CMakeLists.txt  README.md
solutions/benchmarks/: PROFILING_GUIDE.md
solutions/cpp_examples/: 01_hello_world.cpp  CMakeLists.txt
solutions/interview_prep/: NVIDIA_TECHNICAL_QUESTIONS.md
solutions/phase5_cuda/: 01_vector_addition_optimized.cu  02_matrix_multiplication_optimized.cu  03_parallel_reduction.cu  CMakeLists.txt
tests/: test_abstract_classes_advanced.cpp  test_polymorphism.cpp  test_virtual_functions_advanced.cpp
